add reusable components, add login,register,forget password and other and more

--- a/scm-app/tsconfig.json
+++ b/scm-app/tsconfig.json
@@ -5,10 +5,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@views/*": ["app/views/*"],
+      "@views/*": ["app/(auth)/*"],
       "@components/*": ["app/components/*"],
       "@utils/*": ["app/utils/*"],
-      "@assets/*": ["app/assets/*"]
+      "@assets/*": ["app/assets/*"],
+      "@ui/*": ["app/ui/*"]
     },
     "forceConsistentCasingInFileNames": true
   },
