--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "axios-auth-refresh": "^3.3.6",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
