--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -44,7 +44,8 @@
     "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
