--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -25,6 +25,7 @@
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
@@ -33,6 +34,7 @@
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "^6.7.2",
     "luxon": "^3.5.0",
+    "mime": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -44,8 +46,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0",
-    "expo-image-picker": "~15.0.7"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
