complete product edit and add profile name edit

--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "axios-auth-refresh": "^3.3.6",
+    "deep-equal": "^2.2.3",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/deep-equal": "^1.0.4",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/react": "~18.2.45",
