--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -47,6 +47,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
