--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
     "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
     "@types/nodemailer": "^6.4.15"
   }
