--- a/scm-app/package.json
+++ b/scm-app/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.74.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.6.4",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
