--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "formidable": "^3.5.1",
     "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
